Fix overflow y and margins

--- a/DjangoPlaylisty/static/styles/main.css
+++ b/DjangoPlaylisty/static/styles/main.css
@@ -154,9 +154,6 @@
     }
 }
 
-section {
-    margin: 4rem 0;
-}
 
 /* GENERATE PLAYLIST NOT LOGGED IN  */
 #login-to-start,
@@ -283,9 +280,16 @@ h3 {
     position: relative;
     display: flex;
     flex-direction: column;
+    gap: 1.5rem;
     align-items: center;
-    padding-top: 12vw;
+    justify-content: space-between;
     margin: 0;
+    height: 100vh;
+    padding-top: 8rem;
+    padding-bottom: 2rem;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center top;
 }
 
 #playlist-section h1 {
@@ -296,8 +300,9 @@ h3 {
     display: flex;
     flex-direction: column;
     width: min(50rem, 100%);
-    padding: 2rem 0;
     gap: 5px;
+    overflow-y: auto;
+    height: 100%;
 }
 
 #playlist-section .playlist-container li {
@@ -382,21 +387,9 @@ h3 {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 5rem;
 }
 
-.bg2 {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    min-height: 600px;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: bo;
-    z-index: -1;
-}
+
 
 @media (max-width: 1024px) {
 
@@ -417,7 +410,7 @@ h3 {
     .results-container {
         opacity: 0;
         transition: 0.4s opacity ease-in-out;
-        height: 16rem;
+        height: auto;
         align-items: center;
         width: 95%;
         max-width: 50rem;
